# node-hash-benchmark

./: LICENSE  Makefile  README.md  package.json  test.js
js/: index.js  package.json
neon/: package.json
neon/lib/: index.js
neon/native/: Cargo.toml
neon/native/src/: lib.rs
rust-wasm/: Cargo.toml
rust-wasm/src/: lib.rs
wasm/: Cargo.toml  LICENSE  index.js
wasm/src/: lib.rs
