[package]
name = "neon"
version = "0.1.0"
authors = ["Artin <lengthmin@gmail.com>"]
license = "MIT"
build = "build.rs"
edition = "2018"
exclude = ["artifacts.json", "index.node"]

[lib]
name = "neon"
crate-type = ["cdylib"]

[build-dependencies]
neon-build = "0.7.1"

[dependencies]
blake3 = "0.3.7"
md5 = "0.7.0"
neon = "0.7.1"
